<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yumi</string>
    <string name="app_tagline">Plan Yummy</string>
    <string name="splash_screen_description">Splash Screen Description</string>
    <string name="logo_image_description">Logo image description</string>
    <string name="deliciously_planned">Deliciously Planned</string>
    <string name="fruit">🥑</string>
    <string name="salt">🧂</string>
    <string name="lemon">🍋</string>
    <string name="spaghetti">🍝</string>
    <string name="plant">🌿</string>
    <string name="tomato">🍅</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="on_boarding_title_1">Discover Delicious</string>
    <string name="on_boarding_sub_title_1">Meals</string>
    <string name="on_boarding_button_1">Next</string>
    <string name="on_boarding_image_description">On Boarding Image Description</string>
    <string name="on_boarding_details_1">Explore over 1000+ recipes from top chefs around the world.</string>

    <string name="on_boarding_title_2">Plan Your Week</string>
    <string name="on_boarding_sub_title_2">Easily</string>
    <string name="on_boarding_button_2">Next</string>
    <string name="on_boarding_details_2">Create meal plans for the week and generate shopping lists automatically.</string>

    <string name="on_boarding_title_3">Save &amp; Cook</string>
    <string name="on_boarding_sub_title_3">Offline</string>
    <string name="on_boarding_button_3">Get Started</string>
    <string name="on_boarding_details_3">Save your favorite recipes and access them even without internet.</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google_description">Sign in with Google description</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="continue_as_guest"><u>Continue as Guest</u></string>
    <string name="or_continue_with">or continue with</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="plans">Plans</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="what_would_you_like_to_cook_today">What would you like to cook today?</string>
    <string name="hello_food_lover">Hello, Food Lover! 👋</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="meal_description">meal description</string>
    <string name="add_sign">+ Add</string>
    <string name="random_meals">Random Meals</string>
    <string name="ingredients">Ingredients</string>
    <string name="meals">Meals</string>
    <string name="video">Video</string>
    <string name="instructions">Instructions</string>
    <string name="ingredient_description">Ingredient description</string>
    <string name="see_all"><![CDATA[See All >]]></string>
    <string name="countries">Countries</string>
    <string name="categories">Categories</string>
    <string name="category_description">Category description</string>

    <string name="ingredients_count_message">%1$d ingredients</string>
    <string name="browse_by_ingredient">Browse by Ingredient</string>
    <string name="arrow_back_description">Arrow back description</string>
    <string name="browse_by_category">Browse By Category</string>
    <string name="browse_by_country">Browse By Country</string>

    <string name="register_success">You registered successfully</string>
    <string name="login_success">You logged in successfully</string>

    <string name="meals_list_count">%1$d recipes found</string>
    <string name="add_to_meal_plan">Add to Meal Plan</string>
    <string name="play_video">Play Video</string>
    <string name="favorite">Favorite</string>
    <string name="back_arrow">Back Arrow</string>

    <string name="how_to_make_meal">How to Make %1$s</string>
    <string name="watch_the_full_video_tutorial_for_this_recipe">Watch the full video tutorial for this recipe</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="meal_type">Meal Type</string>
    <string name="date">Date</string>
    <string name="ingredient">Ingredient</string>
    <string name="search_hint">Search…</string>
    <string name="no_results_found">No results found</string>
    <string name="add_icon">+</string>
    <string name="meals_planned">Meals Planned</string>
    <string name="settings">Settings</string>
    <string name="yumi_v1_1_0">Yumi v1.1.0</string>

    <string name="en">English</string>
    <string name="ar">Arabic</string>

    <string name="language_prompt">Choose a language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="off">Off</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="on">On</string>
    <string name="my_favorites">My Favorites</string>
    <string name="fav_image_description">Fav Image Description</string>
    <string name="add_to_plan">+ Add to Plan</string>
    <string name="favorite_description">Favorite Description</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="start_adding_your_favorite_recipes_to_see_them_here">Start adding your favorite recipes to see them here</string>
    <string name="recipe_saved">%1$d recipe saved</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <string name="meal_planner">Meal Planner</string>
    <string name="add_meal">Add Meal</string>
    <string name="remove_meal">Remove meal</string>
    <string name="previous_week">Previous week</string>
    <string name="next_week">Next week</string>
    <string name="no_meal_assigned">No meal assigned yet</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>

    <string name="breakfast_time">8:00 AM</string>
    <string name="lunch_time">12:30 PM</string>
    <string name="dinner_time">7:00 PM</string>
    <string name="snack_time">3:00 PM</string>

    <string name="meal_added_to_plan">Meal added to plan!</string>
    <string name="meal_removed_from_plan">Meal removed from plan</string>
    <string name="select_meal_for_type">Select a meal for %1$s</string>
    <string name="select_date">Select date</string>

    <string name="added_to_favorites">Added to favorites!</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="sync_data">Sync Data</string>
    <string name="retrieve_data">Retrieve Data</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_description">No Internet Description</string>
    <string name="no_internet_to_watch_the_video">No internet to watch the video</string>
    <string name="you_should_login_to_use_meal_planner">You should login to use meal planner</string>
    <string name="you_are_in_guest_mode">You are in guest mode</string>

    <string name="hint_search_categories">Search categories…</string>
    <string name="hint_search_countries">Search countries…</string>
    <string name="hint_search_ingredients">Search ingredients…</string>
    <string name="hint_search_meals">Search meals…</string>

    <string name="meal_added_plan_successfully">Meal added to plan successfully</string>
    <string name="meal_added_favorite_successfully">Meal added to favorites successfully</string>

    <string name="meal_removed_plan_successfully">Meal removed from plan successfully</string>
    <string name="meal_removed_favorite_successfully">Meal removed from favorites successfully</string>

    <string name="data_retrieved_successfully">Your data has been retrieved successfully</string>
    <string name="data_sync_successfully">Your data has been uploaded successfully</string>

    <string name="are_you_sure_to_logout">Are you sure to logout without syncing your data</string>

    <string name="login_success_title">Login Successfully</string>
    <string name="login_success_message">You logged in with your account</string>
    <string name="login_success_button">Go to Home</string>

    <string name="register_success_title">Register Successfully</string>
    <string name="register_success_button">Go to Login</string>

    <string name="error_title">Error</string>
    <string name="incorrect_password_email">Incorrect password or email</string>
    <string name="try_again">Try Again</string>
</resources>