<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.splash.SplashActivity">

    <ImageView
        android:id="@+id/splash_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash_screen_description"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/splash_blur_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:blurOverlayColor="@color/blur_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fruit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruit"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/fruit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomato"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/fruit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="@+id/linearLayout"/>

            <TextView
                android:id="@+id/fruit4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spaghetti"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@+id/fruit3"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/fruit5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lemon"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/fruit6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salt"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="@+id/linearLayout"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/logo_glass_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/glass_background"
                    android:elevation="8dp"
                    android:padding="@dimen/padding_card"
                    app:blurOverlayColor="@color/glass_overlay_color">

                    <ImageView
                        android:id="@+id/logo_image"
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/logo_image_description"
                        android:src="@drawable/fork_logo_1" />

                </eightbitlab.com.blurview.BlurView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/yumi_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yumi_logo"
                    android:fontFamily="@font/poppins" />

                <TextView
                    android:id="@+id/yumi_slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deliciously_planned"
                    android:textAllCaps="true"
                    android:textColor="#AAFFFFFF"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/splash_circular_progress"
                    style="@style/CircularProgressIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    app:indicatorColor="@color/secondary"
                    app:indicatorTrackGapSize="10dp"
                    app:trackThickness="4dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </eightbitlab.com.blurview.BlurView>

</androidx.constraintlayout.widget.ConstraintLayout>