<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authentication.fragments.SplashFragment">

    <ImageView
        android:id="@+id/splash_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash_screen_description"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_background" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/splash_blur_view"
        app:blurOverlayColor="@color/blur_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fruit1"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruit"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/fruit2"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomato"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/fruit3"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/fruit4"
                app:layout_constraintStart_toStartOf="@+id/fruit3"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spaghetti"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/fruit5"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lemon"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/fruit6"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salt"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.example.yumi.common.customviews.ShadowLayout
                    android:id="@+id/logo_glass_container"
                    app:corner_radius="24dp"
                    app:shadow_color="@color/shadow_orange"
                    app:shadow_radius="20dp"
                    app:shadow_spread="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <eightbitlab.com.blurview.BlurView
                        app:blurOverlayColor="@color/glass_overlay_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/glass_background"
                        android:padding="@dimen/padding_card">

                        <ImageView
                            android:id="@+id/logo_image"
                            android:layout_width="100dp"
                            android:layout_height="90dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/logo_image_description"
                            android:src="@drawable/fork_logo_1" />

                    </eightbitlab.com.blurview.BlurView>

                </com.example.yumi.common.customviews.ShadowLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/yumi_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yumi_logo"
                    android:fontFamily="@font/poppins" />

                <TextView
                    android:id="@+id/yumi_slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deliciously_planned"
                    android:textAllCaps="true"
                    android:textColor="#AAFFFFFF"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/splash_circular_progress"
                    style="@style/CircularProgressIndicator"
                    app:indicatorColor="@color/secondary"
                    app:indicatorTrackGapSize="10dp"
                    app:trackThickness="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </eightbitlab.com.blurview.BlurView>

</androidx.constraintlayout.widget.ConstraintLayout>